--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -113,6 +113,65 @@
    }
 }
 
+.explore-div-profile {
+   display: grid;
+   gap: 10px;
+   width: 100%;
+   grid-template-columns: repeat(5, auto);
+   grid-template-rows: 200px 200px;
+   grid-template-areas:
+      "a a b c c"
+      "a a d d d";
+   line-height: 0;
+}
+.explore-div-profile:nth-of-type(even) {
+   grid-template-areas:
+      "c c b a a"
+      "d d d a a";
+}
+.explore-div-profile > div {
+   line-height: 0;
+   cursor: pointer;
+}
+.explore-div-profile > div > img {
+   object-fit: cover;
+   width: 100%;
+   height: 100%;
+   border-radius: 5px;
+}
+.explore-div-profile > div:nth-of-type(1) {
+   grid-area: a;
+}
+.explore-div-profile > div:nth-of-type(2) {
+   grid-area: b;
+}
+.explore-div-profile > div:nth-of-type(3) {
+   grid-area: c;
+}
+.explore-div-profile > div:nth-of-type(4) {
+   grid-area: d;
+}
+
+@media (width <= 850px) {
+   .explore-div-profile {
+      padding: 0 20px;
+      grid-template-columns: repeat(2, auto);
+      grid-template-rows: repeat(3, auto);
+      grid-template-areas:
+         "a a b b"
+         "a a b b"
+         "c c d d"
+         "c c d d";
+   }
+   .explore-div-profile:nth-of-type(even) {
+      grid-template-areas:
+         "a a b b"
+         "a a b b"
+         "c c d d"
+         "c c d d";
+   }
+}
+
 @keyframes loaderAnimate {
    from {
       transform: rotate(0deg);
